--- a/en/english.html
+++ b/en/english.html
@@ -93,6 +93,7 @@ ul.structure{list-style:none;}
   <div class="col-12">
   <ul class="structure">
     <li><a href="cb_kit.html" title="CGC Kit Chaturbate">Chaturbate Bio</a></li>
+    <li><a href="mfc_kit.html" title="CGC Kit MyFreeCams">MyFreeCams Profile</a></li>
   </ul>
   <p>adding content...</p>
   </div>
