--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 <div class="col-12 no menu">
 <div class="col-3"><a href="#" title="Index">Index</a></div>
- <div class="col-3"><a href="../../video_cb_biodesign_part1.html" title="Videos">Videos</a></div>
+ <div class="col-3"><a href="../../index.html" title="Videos">Videos</a></div>
 <div class="col-3"><a href="cgc_editor.html" title="Editor's Compatibility">Editor Compatibility</a></div>
 
 <div class="col-2 language tright">
