--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 <div class="col-12 no menu">
 <div class="col-3"><a href="#" title="Index">Index</a></div>
-<div class="col-3"><a href="assets/demo/videos/index.html" title="Videos">Videos</a></div>
+<div class="col-3"><a href="https://cgc-dan.github.io/cgc-designers/assets/videos/" title="Videos">Videos</a></div>
 <div class="col-3"><a href="cgc_editor.html" title="Editor's Compatibility">Editor Compatibility</a></div>
 
 <div class="col-2 language tright">
@@ -121,7 +121,7 @@
       <ul class="structure">
       <li><a href="#" title="Back to index">Index</a></li>
       <li><a href="cgc_editor.html" title="Editor Compatibility">Editor Compatibility</a></li>
-      <li><a href="assets/videos/index.html" target="_blank" title="Demos">Online Demos</a></li>
+      <li><a href="https://cgc-dan.github.io/cgc-designers/assets/videos/" target="_blank" title="Videos">Videos</a></li>
       <li><a href="assets/demo/index.html" target="_blank" title="Demos">Online Demos</a></li>
       </ul>
     </div>
