--- a/assets/videos/video_cb_biodesign_part2.html
+++ b/assets/videos/video_cb_biodesign_part2.html
@@ -131,11 +131,11 @@ textarea.smalltextinfo:focus,textarea.smalltextinfo:hover{-webkit-box-shadow:0 1
   
   <div class="col-12 vid-navs">
   <ul class="vlinks">
-    <li class="col-12"><a href="video_cb_biodesign_part1.html"><img src="../../cover_player_social.jpg" class="vdthumb"><span>Video tutorial Part 1</span></a></li>
-    <li class="col-12 current"><a href="#"><img src="../../cover_player_social.jpg" class="vdthumb"><span>Video tutorial Part 2</span></a></li>
-    <li class="col-12"><a href="#video-0"><img src="../../cover_player_social.jpg" class="vdthumb"><span>Coming soon Part 3</span></a></li>
-    <li class="col-12"><a href="#video-0"><img src="../../cover_player_social.jpg" class="vdthumb"><span>Coming soon Part 4</span></a></li>
-    <li class="col-12"><a href="#video-0"><img src="../../cover_player_social.jpg" class="vdthumb"><span>Coming soon Part 5</span></a></li>
+    <li class="col-12"><a href="video_cb_biodesign_part1.html"><img src="https://raw.githubusercontent.com/cgc-dan/cgc-designers/master/assets/cover_player_social.jpg" class="vdthumb"><span>Video tutorial Part 1</span></a></li>
+    <li class="col-12 current"><a href="#"><img src="https://raw.githubusercontent.com/cgc-dan/cgc-designers/master/assets/cover_player_social.jpg" class="vdthumb"><span>Video tutorial Part 2</span></a></li>
+    <li class="col-12"><a href="#video-0"><img src="https://raw.githubusercontent.com/cgc-dan/cgc-designers/master/assets/cover_player_social.jpg" class="vdthumb"><span>Coming soon Part 3</span></a></li>
+    <li class="col-12"><a href="#video-0"><img src="https://raw.githubusercontent.com/cgc-dan/cgc-designers/master/assets/cover_player_social.jpg" class="vdthumb"><span>Coming soon Part 4</span></a></li>
+    <li class="col-12"><a href="#video-0"><img src="https://raw.githubusercontent.com/cgc-dan/cgc-designers/master/assets/cover_player_social.jpg" class="vdthumb"><span>Coming soon Part 5</span></a></li>
   </ul>
   </div>
   
@@ -160,9 +160,9 @@ textarea.smalltextinfo:focus,textarea.smalltextinfo:hover{-webkit-box-shadow:0 1
     <div class="col-4">
       <p><strong>Quick Nav</strong></p>
       <ul class="structure">
-      <li><a href="../../../index.html" title="Back to index">Index</a></li>
-      <li><a href="../../../cgc_editor.html" title="Editor Compatibility">Editor Compatibility</a></li>
-      <li><a href="../index.html" target="_blank" title="Demos">Online Demos</a></li>
+      <li><a href="https://cgc-dan.github.io/cgc-designers/" title="Back to index">Index</a></li>
+      <li><a href="https://cgc-dan.github.io/cgc-designers/cgc_editor.html" title="Editor Compatibility">Editor Compatibility</a></li>
+      <li><a href="https://cgc-dan.github.io/cgc-designers/index.html" target="_blank" title="Demos">Online Demos</a></li>
       </ul>
     </div>
     
