--- a/assets/videos/video_cb_biodesign_part2.html
+++ b/assets/videos/video_cb_biodesign_part2.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <title>Videos | CGC - Freelancer Program</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="../../page.css" type="text/css"/>
+<link rel="stylesheet" href="page.css" type="text/css"/>
 <style>
 .xcr::-webkit-scrollbar {width:8px;}
 .xcr::-webkit-scrollbar-track {-webkit-box-shadow:inset 0 0 6px rgba(0,0,0,0.3);-webkit-border-radius:10px;border-radius:10px;}
@@ -131,11 +131,11 @@ textarea.smalltextinfo:focus,textarea.smalltextinfo:hover{-webkit-box-shadow:0 1
   
   <div class="col-12 vid-navs">
   <ul class="vlinks">
-    <li class="col-12"><a href="video_cb_biodesign_part1.html"><img src="https://raw.githubusercontent.com/cgc-dan/cgc-designers/master/assets/cover_player_social.jpg" class="vdthumb"><span>Video tutorial Part 1</span></a></li>
-    <li class="col-12 current"><a href="#"><img src="https://raw.githubusercontent.com/cgc-dan/cgc-designers/master/assets/cover_player_social.jpg" class="vdthumb"><span>Video tutorial Part 2</span></a></li>
-    <li class="col-12"><a href="#video-0"><img src="https://raw.githubusercontent.com/cgc-dan/cgc-designers/master/assets/cover_player_social.jpg" class="vdthumb"><span>Coming soon Part 3</span></a></li>
-    <li class="col-12"><a href="#video-0"><img src="https://raw.githubusercontent.com/cgc-dan/cgc-designers/master/assets/cover_player_social.jpg" class="vdthumb"><span>Coming soon Part 4</span></a></li>
-    <li class="col-12"><a href="#video-0"><img src="https://raw.githubusercontent.com/cgc-dan/cgc-designers/master/assets/cover_player_social.jpg" class="vdthumb"><span>Coming soon Part 5</span></a></li>
+    <li class="col-12"><a href="video_cb_biodesign_part1.html"><img src="cover_player_social.jpg" class="vdthumb"><span>Video tutorial Part 1</span></a></li>
+    <li class="col-12 current"><a href="#"><img src="cover_player_social.jpg" class="vdthumb"><span>Video tutorial Part 2</span></a></li>
+    <li class="col-12"><a href="#video-0"><img src="cover_player_social.jpg" class="vdthumb"><span>Coming soon Part 3</span></a></li>
+    <li class="col-12"><a href="#video-0"><img src="cover_player_social.jpg" class="vdthumb"><span>Coming soon Part 4</span></a></li>
+    <li class="col-12"><a href="#video-0"><img src="cover_player_social.jpg" class="vdthumb"><span>Coming soon Part 5</span></a></li>
   </ul>
   </div>
   
@@ -159,11 +159,10 @@ textarea.smalltextinfo:focus,textarea.smalltextinfo:hover{-webkit-box-shadow:0 1
   
     <div class="col-4">
       <p><strong>Quick Nav</strong></p>
-      <ul class="structure">
-      <li><a href="https://cgc-dan.github.io/cgc-designers/" title="Back to index">Index</a></li>
+       <li><a href="https://cgc-dan.github.io/cgc-designers/" title="Back to index">Index</a></li>
       <li><a href="https://cgc-dan.github.io/cgc-designers/cgc_editor.html" title="Editor Compatibility">Editor Compatibility</a></li>
-      <li><a href="https://cgc-dan.github.io/cgc-designers/index.html" target="_blank" title="Demos">Online Demos</a></li>
-      </ul>
+      <li><a href="https://cgc-dan.github.io/cgc-designers/assets/videos/" target="_blank" title="Videos">Videos</a></li>
+      <li><a href="https://cgc-dan.github.io/cgc-designers/demos/" target="_blank" title="Demos">Online Demos</a></li>
     </div>
     
     <div class="col-4">
