--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
       <ul class="structure">
       <li><a href="#" title="Back to index">Index</a></li>
       <li><a href="cgc_editor.html" title="Editor Compatibility">Editor Compatibility</a></li>
-      <li><a href="https://cgc-dan.github.io/cgc-designers/assets/videos/" target="_blank" title="Videos">Videos</a></li>
+      <li><a href="assets/videos/index.html" target="_blank" title="Videos">Videos</a></li>
       <li><a href="assets/demo/index.html" target="_blank" title="Demos">Online Demos</a></li>
       </ul>
     </div>
@@ -166,3 +166,4 @@
 
 </body>
 </html>
+
