--- a/assets/videos/index.html
+++ b/assets/videos/index.html
@@ -92,7 +92,7 @@ body{margin:0 auto;width:90%;font-family:sans-serif;background-color:#f1f1f1;}
 
 
 <div class="header">
-  <h1>CGC Demos and Samples</h1>
+  <h1>CGC Videos and Samples</h1>
 </div>
 
 
