update videos page

--- a/assets/videos/video_cb_biodesign_part1.html
+++ b/assets/videos/video_cb_biodesign_part1.html
@@ -112,11 +112,11 @@ textarea.smalltextinfo:focus,textarea.smalltextinfo:hover{-webkit-box-shadow:0 1
   
   <div class="col-12 vid-navs">
   <ul class="vlinks">
-    <li class="col-12 current"><a href="#videofile"><img src="cover_player_social.jpg" class="vdthumb"><span>Video tutorial Part 1</span></a></li>
+    <li class="col-12 current"><a href="#"><img src="cover_player_social.jpg" class="vdthumb"><span>Video tutorial Part 1</span></a></li>
     <li class="col-12"><a href="video_cb_biodesign_part2.html"><img src="cover_player_social.jpg" class="vdthumb"><span>Video tutorial Part 2</span></a></li>
-    <li class="col-12"><a href="#video-0"><img src="cover_player_social.jpg" class="vdthumb"><span>Coming soon Part 3</span></a></li>
-    <li class="col-12"><a href="#video-0"><img src="cover_player_social.jpg" class="vdthumb"><span>Coming soon Part 4</span></a></li>
-    <li class="col-12"><a href="#video-0"><img src="cover_player_social.jpg" class="vdthumb"><span>Coming soon Part 5</span></a></li>
+    <li class="col-12"><a href="video_cb_biodesign_part3.html"><img src="cover_player_social.jpg" class="vdthumb"><span>Video tutorial Part 3</span></a></li>
+    <li class="col-12 hide"><a href="#video-0"><img src="cover_player_social.jpg" class="vdthumb"><span>Coming soon Part 4</span></a></li>
+    <li class="col-12 hide"><a href="#video-0"><img src="cover_player_social.jpg" class="vdthumb"><span>Coming soon Part 5</span></a></li>
   </ul>
   </div>
   
