--- a/assets/videos/video_cb_biodesign_part3.html
+++ b/assets/videos/video_cb_biodesign_part3.html
@@ -65,16 +65,11 @@ textarea.smalltextinfo:focus,textarea.smalltextinfo:hover{-webkit-box-shadow:0 1
 <div class="tab">
     
     <div id="videofile" class="col-12">
-    <!-- Local
-    <video id="video1" height="400">
-  <source src="..."  type='video/mp4; codecs="avc1.4D401E, mp4a.40.2"'>
-<span class="col-12 tcenter browser">Your browser does not support the video HTML5 tag. Try to update to latest version or use other browser.</span>
-</video>
--->
-<iframe id="ytplayer" type="text/html" width="720" height="405" src="https://www.youtube.com/embed/ShBHJWmFcIs?autoplay=1&disablekb=1&enablejsapi=1&loop=1&modestbranding=1&color=white" frameborder="0" allowfullscreen></iframe>
+
+<iframe id="ytplayer" type="text/html" width="720" height="405" src="https://www.youtube.com/embed/FtrDX5hQzA0?autoplay=1&disablekb=1&enablejsapi=1&loop=1&modestbranding=1&color=white" frameborder="0" allowfullscreen></iframe>
 
 <div class="col-12 tcenter player no">
-<div class="col-8 tleft"><h2 class="vtitle">Coding custom Chaturbate bio design (part 2) </h2></div>
+<div class="col-8 tleft"><h2 class="vtitle">Coding custom Chaturbate bio design (part 3) </h2></div>
    <div class="col-4 tright hide">
      <button class="btn" onclick="playPause()">Play/Pause</button> 
       <button class="btn" onclick="goFullscreen('video1'); return false">Full Screen</button>
@@ -84,10 +79,10 @@ textarea.smalltextinfo:focus,textarea.smalltextinfo:hover{-webkit-box-shadow:0 1
     
     <div id="info" class="col-12 xcr">
     <p>Learn how to code and customize a Chaturbate bio design.</p>
-    <p>Part 2 of this material is showing how to create and code custom fully editable sections</p>
-    <p>In this video you can see how to add <strong>My Tip Menu</strong> and <strong>Top Tippers</strong> section</p>
+    <p>Part 3 of this material is showing how to create and code custom fully editable sections</p>
+    <p>In this video you can see how to add <strong>Gift Cards</strong> section and <strong>floating icons</strong> for Twitter, Amazon Wishlist and Chaturbate Wishlist</p>
     <p>Markup code used in this video material:</p>
-    <div class="col-12 tright editcode"><a href="https://jsfiddle.net/cle_dan/z7foj0dv/1/" target="_blank">Edit Code</a></div>
+    <div class="col-12 tright editcode"><a href="https://jsfiddle.net/cle_dan/yk3zemt8/1/" target="_blank">Edit Code</a></div>
     <div class="col-12">
     <textarea class="smalltextinfo" spellcheck="false"><ul id="main" style="display:block;width:100%;min-width:300px;height:auto;padding:0;box-sizing:border-box;list-style:none;line-height:normal;font-weight:normal;background-color:#000;background-image:url(https://d31rb55u3y3kjs.cloudfront.net/c/u/520476279851687b6dabcc7189410390/2019/04/03055316/3e88c9581b67e9bd506ae792a6074247.png);background-repeat:no-repeat;background-size:cover;background-position:center center;background-attachment:fixed;margin:120px auto 50px -14px;">
 
@@ -108,6 +103,13 @@ textarea.smalltextinfo:focus,textarea.smalltextinfo:hover{-webkit-box-shadow:0 1
 
 
 
+<li style="display:block;width:100%;height:auto;padding:0;box-sizing:border-box;list-style:none;float:none;clear:left;margin:20px auto 22px auto;text-align:center;font-family:sans-serif;color:#999;"><ul style="display:block;width:80%;height:auto;padding:20px 0 22px;box-sizing:border-box;list-style:none;float:none;clear:left;margin:0 auto;text-align:center;background-color:rgba(0,0,0,.70);-webkit-border-radius:20px;border-radius:20px;-webkit-box-shadow:0 0 30px #000;box-shadow:0 0 30px #000;border:1px solid #333;"><li style="display:block;width:90%;height:auto;padding:0;box-sizing:border-box;list-style:none;float:none;clear:left;margin:12px auto 14px auto;text-align:center;"><p style="display:block;width:90%;height:auto;margin:0 auto;padding:10px;text-align:center;line-height:normal;font-size:33px;color:#666;text-shadow:0 2px 5px #000;">Spoil Me</p></li><li style="display:block;width:97%;height:auto;padding:10px 0 22px;box-sizing:border-box;list-style:none;float:none;clear:left;margin:0 auto;text-align:center;font-family:sans-serif;"><p style="display:block;width:90%;height:auto;margin:10px auto 22px auto;padding:10px 0 11px;text-align:center;line-height:normal;font-size:19px;color:#999;text-shadow:0 1px 2px #000;float:none;clear:left;">Send your gift cards to my email@address.com</p><p style="display:block;width:33.33%;height:auto;margin:0 auto;padding:0px;text-align:center;line-height:normal;font-size:19px;color:#999;text-shadow:0 1px 2px #000;float:left;"><img src="https://raw.githubusercontent.com/cssmfc/camgirl/master/misc_assets/giftcards/g_giftcard.png" style="display:block;width:90%;height:auto;margin:0 auto 12px auto;float:none;clear:left;"/><i style="display:block;width:85%;height:auto;float:none;clear:left;margin:0 auto 12px auto;padding:5px 6px;line-height:normal;font-style:normal;text-align:left;">Gift Card Name</i><a href="#" style="display:block;width:80%;height:auto;margin:10px auto 12px auto;text-align:center;padding:8px 11px;background-color:#222;color:#f1f1f1;text-decoration:none;">Send Gift Card</a></p><p style="display:block;width:33.33%;height:auto;margin:0 auto;padding:0px;text-align:center;line-height:normal;font-size:19px;color:#999;text-shadow:0 1px 2px #000;float:left;"><img src="https://raw.githubusercontent.com/cssmfc/camgirl/master/misc_assets/giftcards/g_giftcard.png" style="display:block;width:90%;height:auto;margin:0 auto 12px auto;float:none;clear:left;"/><i style="display:block;width:85%;height:auto;float:none;clear:left;margin:0 auto 12px auto;padding:5px 6px;line-height:normal;font-style:normal;text-align:left;">Gift Card Name</i><a href="#" style="display:block;width:80%;height:auto;margin:10px auto 12px auto;text-align:center;padding:8px 11px;background-color:#222;color:#f1f1f1;text-decoration:none;">Send Gift Card</a></p><p style="display:block;width:33.33%;height:auto;margin:0 auto;padding:0px;text-align:center;line-height:normal;font-size:19px;color:#999;text-shadow:0 1px 2px #000;float:left;"><img src="https://raw.githubusercontent.com/cssmfc/camgirl/master/misc_assets/giftcards/g_giftcard.png" style="display:block;width:90%;height:auto;margin:0 auto 12px auto;float:none;clear:left;"/><i style="display:block;width:85%;height:auto;float:none;clear:left;margin:0 auto 12px auto;padding:5px 6px;line-height:normal;font-style:normal;text-align:left;">Gift Card Name</i><a href="#" style="display:block;width:80%;height:auto;margin:10px auto 12px auto;text-align:center;padding:8px 11px;background-color:#222;color:#f1f1f1;text-decoration:none;">Send Gift Card</a></p></li><li style="display:block;width:100%;height:0px;float:none;clear:left;box-sizing:border-box;list-style:none;margin:0 auto;opacity:0;overflow:hidden;">cgc divider - clearfix</li></ul></li>
+
+<li style="display:block;width:44px;height:auto;position:fixed;top:166px;left:0;padding:3px 0 5px;box-sizing:border-box;list-style:none;text-align:center;"><a href="#"><img src="https://d31rb55u3y3kjs.cloudfront.net/c/u/520476279851687b6dabcc7189410390/2018/12/09124357/twtc.png
+" style="display:block;width:30px;height:auto;margin:0 auto;background-color:#222;"/></a><a href="#"><img src="https://d31rb55u3y3kjs.cloudfront.net/c/u/520476279851687b6dabcc7189410390/2018/12/09124348/amac.png
+" style="display:block;width:30px;height:auto;margin:0 auto;background-color:#222;"/></a><a href="#"><img src="https://d31rb55u3y3kjs.cloudfront.net/c/u/520476279851687b6dabcc7189410390/2018/12/09124349/cbwl.png
+" style="display:block;width:30px;height:auto;margin:0 auto;background-color:#222;"/></a></li>
+<li style="display:block;width:100%;height:auto;padding:10px 0 0;line-height:normal;float:none;clear:left;box-sizing:border-box;list-style:none;margin:20px auto 0px auto;background-color:rgba(0,0,0,0.70);"><ul style="display:block;width:80%;height:auto;padding:15px;line-height:normal;float:none;clear:left;box-sizing:border-box;list-style:none;margin:20px auto 0px auto;"><p style="display:block;width:90%;height:auto;margin:3px auto 5px auto;text-align:center;font-size:13px;padding:4px 6px;color:#999;">All rights reserved 2019 (c) Model Name. Any Unauthorized use of my profile, video, pictures or media content, in any form, now or in the future is NOT Permissible, without expressed written consent. Any act to promote or gain profit in any manner (e.g. either monetarily or socially) from the use of my profile, video, pictures or media content in any form from my profile is a violation of my privacy and subject to legal action. By Reading This - You acknowledge and agree that you shall not post, upload, publish, transmit or make available content of this page including images and recording stream from my online activity and make available for download. This is intended as, and presented as a one time, one view presentation Only. You are Not Allowed to record my cam, or take snapshots of my cam. Penalties of Copyright Infringement. By reproducing, republishing or redistributing the work of a Copyright Holder without permission, You may be violating website's Terms and Conditions</p><p style="display:block;width:90%;height:auto;margin:12px auto 3px auto;float:none;clear:left;font-size:12px;color:#ccc;text-shadow:0 2px 8px #000;text-align:right;padding:4px 0 5px;">Bio design by <a href="https://camgirl.cloud/profile/14324/" style="color:#FFF;">Sebastian CGC</a></p></ul></li>
 
 </ul></textarea></div>
     </div>
@@ -132,8 +134,8 @@ textarea.smalltextinfo:focus,textarea.smalltextinfo:hover{-webkit-box-shadow:0 1
   <div class="col-12 vid-navs">
   <ul class="vlinks">
     <li class="col-12"><a href="video_cb_biodesign_part1.html"><img src="cover_player_social.jpg" class="vdthumb"><span>Video tutorial Part 1</span></a></li>
-    <li class="col-12 current"><a href="#"><img src="cover_player_social.jpg" class="vdthumb"><span>Video tutorial Part 2</span></a></li>
-    <li class="col-12"><a href="video_cb_biodesign_part3.html"><img src="cover_player_social.jpg" class="vdthumb"><span>Video tutorial Part 3</span></a></li>
+    <li class="col-12"><a href="video_cb_biodesign_part2.html"><img src="cover_player_social.jpg" class="vdthumb"><span>Video tutorial Part 2</span></a></li>
+    <li class="col-12 current"><a href="#"><img src="cover_player_social.jpg" class="vdthumb"><span>Video tutorial Part 3</span></a></li>
     <li class="col-12 hide"><a href="#video-0"><img src="cover_player_social.jpg" class="vdthumb"><span>Coming soon Part 4</span></a></li>
     <li class="col-12 hide"><a href="#video-0"><img src="cover_player_social.jpg" class="vdthumb"><span>Coming soon Part 5</span></a></li>
   </ul>
@@ -204,24 +206,6 @@ textarea.smalltextinfo:focus,textarea.smalltextinfo:hover{-webkit-box-shadow:0 1
 </div>
  <!--- end wrapper --->
 
-<script> 
-var myVideo = document.getElementById("video1"); 
 
-function playPause() { 
-  if (myVideo.paused) 
-    myVideo.play(); 
-  else 
-    myVideo.pause(); 
-} 
-
-function goFullscreen(id) {
-  var element = document.getElementById(id);       
-  if (element.mozRequestFullScreen) {
-    element.mozRequestFullScreen();
-  } else if (element.webkitRequestFullScreen) {
-    element.webkitRequestFullScreen();
-  }  
-}
-</script> 
 </body>
 </html>
