updated translation main to raw source

--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
     <script src="bootstrap/js/bootstrap.min.js"></script>
     <script src="bootstrap/js/popper.min.js"></script>
     <script src="translate/jquery.translate.js"></script>
-    <script src="translate/main.js"></script>
+    <script src="https://raw.githubusercontent.com/cgc-dan/cgc-designers/master/translate/main.js"></script>
 
 
 <script>
