--- a/translate/index.html
+++ b/translate/index.html
@@ -28,7 +28,7 @@
 <div id="main" class="row p-0 border-0 m-0 m-auto">
 <!-- Nav -->
 <nav class="navbar navbar-expand-lg navbar-light bgnav-custom-seller pt-0 pb-0 w-100">
-  <a class="navbar-brand p-0" href="https://tutorials.camgirl.cloud/">
+  <a class="navbar-brand p-0" href="https://cgc-dan.github.io/cgc-designers/">
     <div class="logo brand-logo"></div>
     <div class="marg-left"><span class="trn">LEARN 2 CODE</span><i class="subtitle small trn">powered by camgirl.cloud</i></div>
   </a>
@@ -208,7 +208,7 @@ EolpMwAAAABJRU5ErkJggg==" />
   <tbody>
     <tr>
       <th scope="row"><span class="na">NA</span> <span class="trn">index</span></th>
-      <td><a rel="cannonical" href="https://tutorials.camgirl.cloud/" target="_blank"><span class="trn">Main Page</span></a></td>
+      <td><a rel="cannonical" href="https://cgc-dan.github.io/cgc-designers/" target="_blank"><span class="trn">Main Page</span></a></td>
       <td>main.pot, main.po, main.html</td>
       <td align="center"><a href="https://github.com/cgc-dan/cgc-designers/releases/tag/trn1-Main" target="_blank">
 	  <svg class="svg-icon-dnld" viewBox="0 0 20 20">
