--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
       <a class="nav-item nav-link nav-seller trn" href="#about">About</a>
       <a class="nav-item nav-link nav-seller trn" href="#platform">Platform</a>
       <a class="nav-item nav-link nav-seller trn" href="#performance">Why</a>
+     <a class="nav-item nav-link nav-seller trn" href="sitemap.html">Sitemap</a>
     </div>
   </div>
 </nav>
