--- a/p/learn-to-code-bios.html
+++ b/p/learn-to-code-bios.html
@@ -28,7 +28,7 @@
 <div id="main" class="row p-0 border-0 m-0 m-auto">
 <!-- Nav -->
 <nav class="navbar w-100 navbar-expand-lg navbar-light bgnav-custom-seller pt-0 pb-0 fixedt-top">
-  <a class="navbar-brand p-0" href="https://tutorials.camgirl.cloud/">
+  <a class="navbar-brand p-0" href="https://cgc-dan.github.io/cgc-designers/">
     <div class="logo brand-logo"></div>
     <div class="marg-left"><span class="trn">LEARN 2 CODE</span><i class="subtitle small trn">powered by camgirl.cloud</i></div>
   </a>
@@ -37,9 +37,10 @@
   </button>
   <div class="collapse navbar-collapse p-0 justify-content-end" id="SellerNav">
     <div class="navbar-nav nav-custom p-0">
-      <a class="nav-item nav-link nav-seller trn" href="https://tutorials.camgirl.cloud/#about">About</a>
-      <a class="nav-item nav-link nav-seller trn" href="https://tutorials.camgirl.cloud/#platform">Platform</a>
-      <a class="nav-item nav-link nav-seller trn" href="https://tutorials.camgirl.cloud/#performance">Why</a>
+      <a class="nav-item nav-link nav-seller trn" href="https://cgc-dan.github.io/cgc-designers/#about">About</a>
+      <a class="nav-item nav-link nav-seller trn" href="https://cgc-dan.github.io/cgc-designers/#platform">Platform</a>
+      <a class="nav-item nav-link nav-seller trn" href="https://cgc-dan.github.io/cgc-designers/#performance">Why</a>
+      <a class="nav-item nav-link nav-seller trn" href="https://cgc-dan.github.io/cgc-designers/sitemap.html" target="_blank">Sitemap</a>
     </div>
   </div>
 </nav>
