--- a/p/cb/cb-img.html
+++ b/p/cb/cb-img.html
@@ -37,9 +37,7 @@
   </button>
   <div class="collapse navbar-collapse p-0 justify-content-end" id="SellerNav">
     <div class="navbar-nav nav-custom p-0">
-      <a class="nav-item nav-link nav-seller trn" href="../../index.html#about">About</a>
-      <a class="nav-item nav-link nav-seller trn" href="../../index.html#platform">Platform</a>
-      <a class="nav-item nav-link nav-seller trn" href="../../index.html#performance">Why</a>
+      <a class="nav-item nav-link nav-seller trn" href="https://cgc-dan.github.io/cgc-designers/sitemap.html" target="_blank">Sitemap</a>
     </div>
   </div>
 </nav>
