--- a/p/cb/cb-ul.html
+++ b/p/cb/cb-ul.html
@@ -85,10 +85,10 @@
           <span class="trn">Demos and Examples</span>
         </a>
         <div class="dropdown-menu dropdown-menu-studio animated flipInX" aria-labelledby="studioDropDown">
-          <a class="dropdown-item trn" href="#"><span class="trn">Demo</span></a>
-          <a class="dropdown-item trn" href="#">Tutorial Video 1</a>
-          <a class="dropdown-item trn" href="#">Tutorial Video 2</a>
-          <a class="dropdown-item trn" href="#">Tutorial Video 3</a>
+          <a class="dropdown-item" href="https://cgc-dan.github.io/cgc-designers/p/cb/cb-demo/cb-demo-index.html"><span class="trn">Demo</span></a>
+          <a class="dropdown-item" href="https://cgc-dan.github.io/cgc-designers/p/cb/cb-demo/cb-video-tutorial-1.html">CB <span class="trn">Tutorial Video</span> 1</a>
+          <a class="dropdown-item" href="https://cgc-dan.github.io/cgc-designers/p/cb/cb-demo/cb-video-tutorial-2.html">CB <span class="trn">Tutorial Video</span> 2</a>
+          <a class="dropdown-item" href="https://cgc-dan.github.io/cgc-designers/p/cb/cb-demo/cb-video-tutorial-3.html">CB <span class="trn">Tutorial Video</span> 3</a>
         </div>
       </li>
     </ul>
